--- a/src/app/dog/dog.component.html
+++ b/src/app/dog/dog.component.html
@@ -5,6 +5,6 @@
             <img id="imageDog" [src]="this.dog.message" alt=>
         </figure>
 
-      
+        <p>{{(this.dog.status)}}</p>
     </div>
 </div>
